reorganize structure somewhat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,14 @@ set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 set(GLM_TEST_ENABLE OFF CACHE BOOL "" FORCE)
 
+find_package(Vulkan REQUIRED)
+
 add_subdirectory(external/glfw)
 add_subdirectory(external/glm)
 
-find_package(Vulkan REQUIRED)
-
-add_executable(TestApp "${PROJECT_SOURCE_DIR}/src/main.cpp")
-target_compile_features(TestApp PUBLIC cxx_std_17)
-target_link_libraries(TestApp Vulkan::Vulkan glfw glm)
+# chapter01 executable
+add_executable(chapter01
+    "${PROJECT_SOURCE_DIR}/src/chapter01/main.cpp"
+)
+target_compile_features(chapter01 PUBLIC cxx_std_17)
+target_link_libraries(chapter01 Vulkan::Vulkan glfw glm)
